# pdf-scraping-rag

./: .gitignore  AGENTS.md  README.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/wikipdf/: __init__.py  __main__.py  cli.py  config.py  fetcher.py  pdfgen.py
tests/: __init__.py  test_cli.py  test_fetcher.py  test_pdfgen.py
